# cmake_example_project

./: CMakeLists.txt  README.md
ExtraLibrary/: CMakeLists.txt
src/: main.c
